--- a/mysite/myapp/templates/index.html
+++ b/mysite/myapp/templates/index.html
@@ -1,9 +1,4 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>{{ title }}</title>
-    </head>
-    <body>
-        {{ body }} 
-    </body>
-</html>
+{% extends "base.html" %}
+
+{% block title%} {{ title }} {% endblock %}
+{% block body %} {{ body }} {% endblock %}
