--- a/mysite/myapp/templates/base.html
+++ b/mysite/myapp/templates/base.html
@@ -1,11 +1,36 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8" />
+        <meta http-equiv="x-ua-compatible" content="ie=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>{% block title %}{% endblock %}</title>
+        <link rel="stylesheet" href="{% static 'css/app.min.css' %}">
     </head>
     <body>
-        <p>Nav Bar</p>
+        <div class = "top-bar">
+            <div class = "top-bar-left">
+                <ul class = "menu">
+                    <li class = "menu-text">This is a website</li>
+                    <li><a href = "/play/">play</a></li>
+                    <li><a href = "/players/">players</a></li>
+                    <li><a href = "/yourgames/">your games</a></li>
+                </ul>
+            </div><!--top bar left-->
+            <div class = "top-bar-right">
+                <ul class = "menu">
+                    {% if request.user.is_authenticated %}
+                        <li>logout</li>
+                    {% else %}
+                        <li>login</li>
+                    {% endif %}
+                </ul>
+            </div><!--top bar right-->
+        </div><!--top bar-->
         {% block body %}
         {% endblock %}
+        <script src="{% static 'js/vendor.js' %}"></script>
+        <script src="{% static 'js/app.min.js' %}"></script>
     </body>
 </html>
