--- a/mysite/myapp/templates/index.html
+++ b/mysite/myapp/templates/index.html
@@ -1,4 +1,221 @@
 {% extends "base.html" %}
 
 {% block title%} {{ title }} {% endblock %}
-{% block body %} {{ body }} {% endblock %}
+{% block body %} 
+
+<div class = "grid-container">
+    <div class="grid-x" style = "height: 100px;">
+        <div class="cell small-1" >
+            <div style = "width:100px;height:100px;border:1px solid #000;" ></div>
+        </div><!--A8-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:50px solid #000;" ></div>
+        </div><!--B8-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:1px solid #000;" ></div>
+        </div><!--C8-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:50px solid #000;" ></div>
+        </div><!--D8-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:1px solid #000;" ></div>
+        </div><!--E8-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:50px solid #000;" ></div>
+        </div><!--F8-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:1px solid #000;" ></div>
+        </div><!--G8-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:50px solid #000;" ></div>
+        </div><!--H8-->
+    </div><!--row 1-->
+    <div class="grid-x" style = "height: 100px;">
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:50px solid #000;" ></div>
+        </div><!--A7-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:1px solid #000;" ></div>
+        </div><!--B7-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:50px solid #000;" ></div>
+        </div><!--C7-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:1px solid #000;" ></div>
+        </div><!--D7-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:50px solid #000;" ></div>
+        </div><!--E7-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:1px solid #000;" ></div>
+        </div><!--F7-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:50px solid #000;" ></div>
+        </div><!--G7-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:1px solid #000;" ></div>
+        </div><!--H7-->
+    </div><!--row 2-->
+    <div class="grid-x" style = "height: 100px;">
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:1px solid #000;" ></div>
+        </div><!--A6-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:50px solid #000;"></div>
+        </div><!--B6-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:1px solid #000;" ></div>
+        </div><!--C6-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:50px solid #000;"></div>
+        </div><!--D6-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:1px solid #000;" ></div>
+        </div><!--E6-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:50px solid #000;"></div>
+        </div><!--F6-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:1px solid #000;" ></div>
+        </div><!--G6-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:50px solid #000;"></div>
+        </div><!--H6-->
+    </div><!--row 3-->
+    <div class="grid-x" style = "height: 100px;">
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:50px solid #000;"></div>
+        </div><!--A5-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:1px solid #000;" ></div>
+        </div><!--B5-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:50px solid #000;"></div>
+        </div><!--C5-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:1px solid #000;" ></div>
+        </div><!--D5-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:50px solid #000;"></div>
+        </div><!--E5-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:1px solid #000;" ></div>
+        </div><!--F5-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:50px solid #000;"></div>
+        </div><!--G5-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:1px solid #000;" ></div>
+        </div><!--H5-->
+    </div><!--row 4-->
+    <div class="grid-x" style = "height: 100px;">
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:1px solid #000;" ></div>
+        </div><!--A4-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:50px solid #000;"></div>
+        </div><!--B4-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:1px solid #000;" ></div>
+        </div><!--C4-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:50px solid #000;"></div>
+        </div><!--D4-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:1px solid #000;" ></div>
+        </div><!--E4-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:50px solid #000;"></div>
+        </div><!--F4-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:1px solid #000;" ></div>
+        </div><!--G4-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:50px solid #000;"></div>
+        </div><!--H4-->
+    </div><!--row 5-->
+    <div class="grid-x" style = "height: 100px;">
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:50px solid #000;"></div>
+        </div><!--A3-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:1px solid #000;" ></div>
+        </div><!--B3-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:50px solid #000;"></div>
+        </div><!--C3-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:1px solid #000;" ></div>
+        </div><!--D3-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:50px solid #000;"></div>
+        </div><!--E3-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:1px solid #000;" ></div>
+        </div><!--F3-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:50px solid #000;"></div>
+        </div><!--G3-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:1px solid #000;" ></div>
+        </div><!--H3-->
+    </div><!--row 6-->
+    <div class="grid-x" style = "height: 100px;">
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:1px solid #000;" ></div>
+        </div><!--A2-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:50px solid #000;"></div>
+        </div><!--B2-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:1px solid #000;" ></div>
+        </div><!--C2-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:50px solid #000;"></div>
+        </div><!--D2-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:1px solid #000;" ></div>
+        </div><!--E2-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:50px solid #000;"></div>
+        </div><!--F2-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:1px solid #000;" ></div>
+        </div><!--G2-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:50px solid #000;"></div>
+        </div><!--H2-->
+    </div><!--row 7-->
+    <div class="grid-x" style = "height: 100px;">
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:50px solid #000;"></div>
+        </div><!--A1-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:1px solid #000;" ></div>
+        </div><!--B1-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:50px solid #000;"></div>
+        </div><!--C1-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:1px solid #000;" ></div>
+        </div><!--D1-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:50px solid #000;"></div>
+        </div><!--E1-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:1px solid #000;" ></div>
+        </div><!--F1-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:50px solid #000;"></div>
+        </div><!--G1-->
+        <div class="cell small-1">
+            <div style = "width:100px;height:100px;border:1px solid #000;" ></div>
+        </div><!--H1-->
+    </div><!--row 8-->
+</div><!--grid container-->
+
+
+
+
+
+{% endblock %}
