--- a/mysite/myapp/templates/base.html
+++ b/mysite/myapp/templates/base.html
@@ -33,6 +33,9 @@
         {% endblock %}
         <script src="{% static 'js/vendor.js' %}"></script>
         <script src="{% static 'js/app.min.js' %}"></script>
+
+        {% block scripts %}
+        {% endblock %}
         
     </body>
 </html>
