websockets basic chat

--- a/mysite/myapp/templates/base.html
+++ b/mysite/myapp/templates/base.html
@@ -16,6 +16,7 @@
                     <li><a href = "/play/">play</a></li>
                     <li><a href = "/players/">players</a></li>
                     <li><a href = "/yourgames/">your games</a></li>
+                    <li><a href = "/chat/">chat</a></li>
                 </ul>
             </div><!--top bar left-->
             <div class = "top-bar-right">
