--- a/mysite/myapp/templates/chat/room.html
+++ b/mysite/myapp/templates/chat/room.html
@@ -5,12 +5,15 @@
 {% block title %}{{ title }}{% endblock %}
 
 {% block body %}
+    
     <textarea id="chat-log" cols="100" rows="20"></textarea><br>
     <input id="chat-message-input" type="text" size="100"><br>
     <input id="chat-message-submit" type="button" value="Send">
     {{ room_name|json_script:"room-name" }}
+    {{ user|json_script:"user"}}
     <script>
         const roomName = JSON.parse(document.getElementById('room-name').textContent);
+        const user = JSON.parse(document.getElementById('user').textContent);
 
         const chatSocket = new WebSocket(
             'ws://'
@@ -38,7 +41,7 @@
 
         document.querySelector('#chat-message-submit').onclick = function(e) {
             const messageInputDom = document.querySelector('#chat-message-input');
-            const message = messageInputDom.value;
+            const message = user + ': ' + messageInputDom.value;
             chatSocket.send(JSON.stringify({
                 'message': message
             }));
