--- a/mysite/myapp/templates/base.html
+++ b/mysite/myapp/templates/base.html
@@ -12,11 +12,11 @@
         <div class = "top-bar">
             <div class = "top-bar-left">
                 <ul class = "menu">
-                    <li class = "menu-text">This is a website</li>
+                    <li><a class = "menu-text" href = "/">CHESSISH</a></li>
                     <li><a href = "/play/">play</a></li>
                     <li><a href = "/players/">players</a></li>
                     <li><a href = "/yourgames/">your games</a></li>
-                    <li><a href = "/chat/">chat</a></li>
+                    <!-- <li><a href = "/chat/">chat</a></li> -->
                 </ul>
             </div><!--top bar left-->
             <div class = "top-bar-right">
@@ -30,6 +30,7 @@
                 </ul>
             </div><!--top bar right-->
         </div><!--top bar-->
+        
         {% block body %}
         {% endblock %}
         <script src="{% static 'js/vendor.js' %}"></script>
