players page change

--- a/mysite/myapp/templates/chat/room.html
+++ b/mysite/myapp/templates/chat/room.html
@@ -321,7 +321,7 @@
         <div>{{ form.winner.label }}</div>
         <div>{{ form.winner }}</div>
         <div>{{ form.winner.errors }}</div>
-        <input type = "submit" class = "button" value = "start game">
+        <input type = "submit" class = "button" value = "save game">
     </form>
     {% endif %}
 
