--- a/mysite/myapp/templates/chat/room.html
+++ b/mysite/myapp/templates/chat/room.html
@@ -310,7 +310,7 @@
     <hr>
 
     {% if request.user.username == room_name %}
-    <form action = "/chat/{{ room_name }}/" method = "post">
+    <form action = "/yourgames/" method = "post">
         {% csrf_token %}
         <div>{{ form.white.label }}</div>
         <div>{{ form.white }}</div>
